2014-10-16  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION (r169024): Undetermined text is not displayed in the search field of Adobe Help Website
        https://bugs.webkit.org/show_bug.cgi?id=137679
        rdar://problem/18450335

        Reviewed by Enrica Casucci.

        * platform/mac/editing/input/selected-composed-text-painting-expected.html: Added.
        * platform/mac/editing/input/selected-composed-text-painting.html: Added.

2014-10-14  Dan Bernstein  <mitz@apple.com>

        URLs that start with http:/// and https:/// lose two slashes when parsed, causing assertion failure and inconsistent behavior
        https://bugs.webkit.org/show_bug.cgi?id=137718

        Reviewed by Alexey Proskuryakov.

        * fast/loader/url-parse-1-expected.txt: Updated results.
        * fast/loader/url-parse-1.html: Added a few test cases.
        * fast/url/file-http-base-expected.txt: Updated results.
        * fast/url/host-expected.txt: Ditto.
        * fast/url/invalid-urls-utf8-expected.txt: Ditto.
        * fast/url/relative-expected.txt: Ditto.
        * fast/url/standard-url-expected.txt: Ditto.

2014-10-14  Youenn Fablet  <youennf@gmail.com>

        [XHR] Abort method execution when m_loader->cancel() in internalAbort() caused reentry
        https://bugs.webkit.org/show_bug.cgi?id=126975

        Reviewed by Alexey Proskuryakov.

        Adding reentrant-cancel-abort.html (from https://codereview.chromium.org/76133002/) 
        that crashes without the patch
        Updated reentrant-cancel.html test to expect the exception 
        that is now hit in initSend function (since a XHR open() call is aborted)

        * http/tests/xmlhttprequest/reentrant-cancel-abort-expected.txt: Added.
        * http/tests/xmlhttprequest/reentrant-cancel-abort.html: Added.
        * http/tests/xmlhttprequest/reentrant-cancel.html:

2014-09-30  Said Abou-Hallawa  <sabouhallawa@apple.com>

        Stack overflow with enormous SVG filter.